--- a/rstudio/rhel9-python-3.12/Dockerfile.cuda
+++ b/rstudio/rhel9-python-3.12/Dockerfile.cuda
@@ -27,17 +27,16 @@ EOF
 # Problem: The operation would result in removing the following protected packages: systemd
 #  (try to add '--allowerasing' to command line to replace conflicting packages or '--skip-broken' to skip uninstallable packages)
 # Solution: --best --skip-broken does not work either, so use --nobest
-RUN /bin/bash <<'EOF'
+RUN --mount=type=cache,target=/var/cache/dnf,sharing=locked,id=dnf-ubi9 /bin/bash <<'EOF'
 set -Eeuxo pipefail
-dnf -y upgrade --refresh --nobest --skip-broken --nodocs --noplugins --setopt=install_weak_deps=0 --setopt=keepcache=0
-dnf clean all -y
+dnf -y upgrade --refresh --nobest --skip-broken --nodocs --noplugins --setopt=install_weak_deps=0 --setopt=keepcache=1
 EOF
 
 ### END upgrade first to avoid fixable vulnerabilities
 
 # Install useful OS packages
 # remove skopeo, CVE-2025-4674
-RUN dnf install -y perl mesa-libGL && dnf clean all && rm -rf /var/cache/yum
+RUN --mount=type=cache,target=/var/cache/dnf,sharing=locked,id=dnf-ubi9 dnf install -y --setopt=keepcache=1 perl mesa-libGL
 
 # Other apps and tools installed as default user
 USER 1001
@@ -59,14 +58,14 @@ ARG TARGETARCH
 WORKDIR /opt/app-root/bin
 
 LABEL name="odh-notebook-rstudio-server-rhel9-python-3.12" \
-      summary="RStudio Server image with python 3.12 based on Red Hat Enterprise Linux 9" \
-      description="RStudio Server image with python 3.12 based on Red Hat Enterprise Linux 9" \
-      io.k8s.display-name="RStudio Server image with python 3.12 based on Red Hat Enterprise Linux 9" \
-      io.k8s.description="RStudio Server image with python 3.12 based on Red Hat Enterprise Linux 9" \
-      authoritative-source-url="https://github.com/opendatahub-io/notebooks" \
-      io.openshift.build.commit.ref="main" \
-      io.openshift.build.source-location="https://github.com/opendatahub-io/notebooks/tree/main/rstudio/rhel9-python-3.12" \
-      io.openshift.build.image="quay.io/opendatahub/workbench-images:rstudio-rhel9-python-3.12"
+  summary="RStudio Server image with python 3.12 based on Red Hat Enterprise Linux 9" \
+  description="RStudio Server image with python 3.12 based on Red Hat Enterprise Linux 9" \
+  io.k8s.display-name="RStudio Server image with python 3.12 based on Red Hat Enterprise Linux 9" \
+  io.k8s.description="RStudio Server image with python 3.12 based on Red Hat Enterprise Linux 9" \
+  authoritative-source-url="https://github.com/opendatahub-io/notebooks" \
+  io.openshift.build.commit.ref="main" \
+  io.openshift.build.source-location="https://github.com/opendatahub-io/notebooks/tree/main/rstudio/rhel9-python-3.12" \
+  io.openshift.build.image="quay.io/opendatahub/workbench-images:rstudio-rhel9-python-3.12"
 
 USER 0
 
@@ -75,10 +74,9 @@ USER 0
 ENV XLA_FLAGS=--xla_gpu_cuda_data_dir=/usr/local/cuda
 
 # Install CUDA toolkit 12.8
-RUN /bin/bash <<'EOF'
+RUN --mount=type=cache,target=/var/cache/dnf,sharing=locked,id=dnf-ubi9 /bin/bash <<'EOF'
 set -Eeuxo pipefail
-dnf -y install cuda-toolkit-12-8
-dnf -y clean all --enablerepo="*"
+dnf -y install --setopt=keepcache=1 cuda-toolkit-12-8
 EOF
 
 WORKDIR /opt/app-root/src
@@ -98,10 +96,9 @@ fi
 dnf install -y https://dl.fedoraproject.org/pub/epel/epel-release-latest-9.noarch.rpm
 INSTALL_PKGS="R-core R-core-devel R-java R-Rcpp R-highlight \
 R-littler R-littler-examples openssl-libs compat-openssl11"
-dnf install -y --setopt=tsflags=nodocs $INSTALL_PKGS
+dnf install -y --setopt=tsflags=nodocs --setopt=keepcache=1 $INSTALL_PKGS
 echo 'options(repos = c(CRAN = "https://cran.rstudio.com/"), download.file.method = "libcurl")' >> /usr/lib64/R/etc/Rprofile.site
 (umask 002;touch /usr/lib64/R/etc/Renviron.site)
-dnf -y clean all --enablerepo='*'
 EOF
 
 # set R library to default (used in install.r from littler)
@@ -124,19 +121,16 @@ ARG RSTUDIO_RPM=rstudio-server-rhel-2025.09.0-387-x86_64.rpm
 RUN /bin/bash <<'EOF'
 set -Eeuxo pipefail
 wget --progress=dot:giga https://download2.rstudio.org/server/rhel9/x86_64/${RSTUDIO_RPM}
-dnf install -y ${RSTUDIO_RPM}
+dnf install -y --setopt=keepcache=1 ${RSTUDIO_RPM}
 rm ${RSTUDIO_RPM}
-dnf -y clean all  --enablerepo='*'
 # Specific RStudio config and fixes
 chmod 1777 /var/run/rstudio-server
 mkdir -p /usr/share/doc/R
 # package installation
 # install necessary texlive-framed package to make Knit R markup to PDF rendering possible
-dnf install -y libgit2-devel.x86_64 libcurl-devel harfbuzz-devel.x86_64 fribidi-devel.x86_64 cmake "flexiblas-*" texlive-framed
+dnf install -y --setopt=keepcache=1 libgit2-devel.x86_64 libcurl-devel harfbuzz-devel.x86_64 fribidi-devel.x86_64 cmake "flexiblas-*" texlive-framed
 # install npm to run cve_remediation script
-dnf install -y npm
-dnf clean all
-rm -rf /var/cache/yum
+dnf install -y --setopt=keepcache=1 npm
 (cd /tmp/utils && ./cve_remediation.sh)
 EOF
 
@@ -155,24 +149,23 @@ ENV APP_ROOT=/opt/app-root
 
 # Install NGINX to proxy RStudio and pass probes check
 ENV NGINX_VERSION=1.24 \
-    NGINX_SHORT_VER=124 \
-    NGINX_CONFIGURATION_PATH=${APP_ROOT}/etc/nginx.d \
-    NGINX_CONF_PATH=/etc/nginx/nginx.conf \
-    NGINX_DEFAULT_CONF_PATH=${APP_ROOT}/etc/nginx.default.d \
-    NGINX_CONTAINER_SCRIPTS_PATH=/usr/share/container-scripts/nginx \
-    NGINX_APP_ROOT=${APP_ROOT} \
-    NGINX_LOG_PATH=/var/log/nginx \
-    NGINX_PERL_MODULE_PATH=${APP_ROOT}/etc/perl
+  NGINX_SHORT_VER=124 \
+  NGINX_CONFIGURATION_PATH=${APP_ROOT}/etc/nginx.d \
+  NGINX_CONF_PATH=/etc/nginx/nginx.conf \
+  NGINX_DEFAULT_CONF_PATH=${APP_ROOT}/etc/nginx.default.d \
+  NGINX_CONTAINER_SCRIPTS_PATH=/usr/share/container-scripts/nginx \
+  NGINX_APP_ROOT=${APP_ROOT} \
+  NGINX_LOG_PATH=/var/log/nginx \
+  NGINX_PERL_MODULE_PATH=${APP_ROOT}/etc/perl
 
 # Modules does not exist
 RUN /bin/bash <<'EOF'
 set -Eeuxo pipefail
 dnf -y module enable nginx:$NGINX_VERSION
 INSTALL_PKGS="nss_wrapper bind-utils gettext hostname nginx nginx-mod-stream nginx-mod-http-perl httpd"
-dnf install -y --setopt=tsflags=nodocs $INSTALL_PKGS
+dnf install -y --setopt=tsflags=nodocs --setopt=keepcache=1 $INSTALL_PKGS
 rpm -V $INSTALL_PKGS
 nginx -v 2>&1 | grep -qe "nginx/$NGINX_VERSION\." && echo "Found VERSION $NGINX_VERSION"
-dnf -y clean all --enablerepo='*'
 EOF
 
 # Configure httpd for CGI processing
