--- a/base-images/rocm/6.3/ubi9-python-3.12/Dockerfile.rocm
+++ b/base-images/rocm/6.3/ubi9-python-3.12/Dockerfile.rocm
@@ -22,7 +22,7 @@ ARG AMDGPU_VERSION=6.3.4
 # Note: Based on 6.4 above new package mivisionx is a pre-requistes, which bring in more dependent packages
 # so we are only installing meta packages of rocm
 # ref: https://rocm.docs.amd.com/projects/install-on-linux/en/develop/reference/package-manager-integration.html#packages-in-rocm-programming-models
-RUN --mount=type=cache,target=/var/cache/dnf,sharing=locked,id=dnf-ubi9 echo "[ROCm]" > /etc/yum.repos.d/rocm.repo && \
+RUN --mount=type=cache,target=/var/cache/dnf,sharing=locked,id=notebooks-dnf echo "[ROCm]" > /etc/yum.repos.d/rocm.repo && \
     echo "name=ROCm" >> /etc/yum.repos.d/rocm.repo && \
     echo "baseurl=https://repo.radeon.com/rocm/rhel9/$ROCM_VERSION/main" >> /etc/yum.repos.d/rocm.repo && \
     echo "enabled=1" >> /etc/yum.repos.d/rocm.repo && \
