NO-JIRA: chore(pyproject.toml): update dev-dependencies

--- a/pytest.ini
+++ b/pytest.ini
@@ -3,7 +3,8 @@
 [pytest]
 addopts = --strict-markers --capture=no --tb=short
 
-required_plugins = pytest-subtests
+# pytest-subtest plugin is built-in since pytest 9.0: https://docs.pytest.org/en/stable/how-to/subtests.html
+required_plugins =
 
 junit_logging = all
 junit_log_passing_tests = False
