RHAIENG-2111: chore(trustyai): enable pypi to get access to required build dependencies (#1732)
* expecttest not present

* cmake, auditwheel, and some build-deps are not present

* uv for ibm arches is not present in 3.0 aipcc index

```
  + pip install --no-cache-dir uv
  Looking in indexes: https://console.redhat.com/api/pypi/public-rhai/rhoai/3.0/cpu-ubi9/simple/
  ERROR: Could not find a version that satisfies the requirement uv (from versions: none)
```

* cython is a build dependency for pandas

```
   Downloading scipy
     Building pandas==1.5.3
    × Failed to download and build `pandas==1.5.3`
    ├─▶ Failed to resolve requirements from `build-system.requires`
    ├─▶ No solution found when resolving: `setuptools>=51.0.0`, `wheel`,
    │   `cython>=0.29.32, <3`, `oldest-supported-numpy>=2022.8.16`
    ╰─▶ Because only cython>=3.0.12 is available and you require
        cython>=0.29.32,<3, we can conclude that your requirements are
        unsatisfiable.
  subprocess exited with status 1
```

--- a/jupyter/trustyai/ubi9-python-3.12/Dockerfile.cpu
+++ b/jupyter/trustyai/ubi9-python-3.12/Dockerfile.cpu
@@ -37,7 +37,9 @@ COPY ${TRUSTYAI_SOURCE_CODE}/devel_env_setup.sh .
 RUN --mount=type=cache,target=/var/cache/dnf,sharing=locked,id=notebooks-dnf \
     --mount=type=cache,target=/root/.cache/uv /bin/bash <<'EOF'
 set -Eeuxo pipefail
-pip install --no-cache-dir uv
+# RHAIENG-2111: Looking in indexes: https://console.redhat.com/api/pypi/public-rhai/rhoai/3.0/cpu-ubi9/simple/
+#  ERROR: Could not find a version that satisfies the requirement uv (from versions: none)
+pip install --no-cache-dir --extra-index-url https://pypi.org/simple uv
 
 # If we have a Red Hat subscription prepared, refresh it
 if command -v subscription-manager &> /dev/null; then
@@ -48,7 +50,8 @@ fi
 source ./devel_env_setup.sh
 # This may have to download and compile some dependencies, and as we don't lock requirements from `build-system.requires`,
 #  we often don't know the correct hashes and `--require-hashes` would therefore fail on non amd64, where building is common.
-UV_LINK_MODE=copy uv pip install --strict --no-deps --refresh --no-config --no-progress --verify-hashes --compile-bytecode --index-strategy=unsafe-best-match --requirements=./pylock.toml
+# RHAIENG-2111: building pandas requires cython from PyPI
+UV_LINK_MODE=copy uv pip install --strict --no-deps --refresh --no-config --no-progress --verify-hashes --compile-bytecode --index-strategy=unsafe-best-match --extra-index-url https://pypi.org/simple --requirements=./pylock.toml
 EOF
 
 ####################
@@ -232,7 +235,8 @@ RUN --mount=type=cache,target=/root/.cache/uv /bin/bash <<'EOF'
 set -Eeuxo pipefail
 echo "Installing softwares and packages"
 # we can ensure wheels are consumed from the cache only by restricting internet access for uv install with '--offline' flag
-UV_LINK_MODE=copy uv pip install --cache-dir /root/.cache/uv --requirements=./pylock.toml
+# RHAIENG-2111: building pandas requires cython from PyPI
+UV_LINK_MODE=copy uv pip install --cache-dir /root/.cache/uv --extra-index-url https://pypi.org/simple --requirements=./pylock.toml
 # Note: debugpy wheel availabe on pypi (in uv cache) is none-any but bundles amd64.so files
 #       Build debugpy from source instead
 UV_LINK_MODE=copy uv pip install --no-cache git+https://github.com/microsoft/debugpy.git@v$(grep -A1 '\"debugpy\"' ./pylock.toml | grep -Eo '\b[0-9\.]+\b')
